Upgraded Gradle -> 7.5 and added GitHub Actions